--- a/libfsrefs/libfsrefs.rc.in
+++ b/libfsrefs/libfsrefs.rc.in
@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libfsrefs.dll\0"
       VALUE "ProductName",		"libfsrefs\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libfsrefs/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libfsrefs/\0"
     END
   END
   BLOCK "VarFileInfo"
