Worked on format.

--- a/libfsrefs-wiki.ini
+++ b/libfsrefs-wiki.ini
@@ -20,6 +20,8 @@ features: ["valgrind"]
 directory: "fsrefstools"
 names: ["fsrefsinfo"]
 
+[troubleshooting]
+
 [cygwin]
 build_dependencies: []
 dll_dependencies: []
