--- a/include/libfsrefs.h.in
+++ b/include/libfsrefs.h.in
@@ -49,7 +49,31 @@ LIBFSREFS_EXTERN \
 const char *libfsrefs_get_version(
              void );
 
-/* Determines if an volume containt the REFS file system (check for the REFS signature)
+/* Returns the access flags for reading
+ */
+LIBFSREFS_EXTERN \
+int libfsrefs_get_access_flags_read(
+     void );
+
+/* Retrieves the narrow system string codepage
+ * A value of 0 represents no codepage, UTF-8 encoding is used instead
+ * Returns 1 if successful or -1 on error
+ */
+LIBFSREFS_EXTERN \
+int libfsrefs_get_codepage(
+     int *codepage,
+     libfsrefs_error_t **error );
+
+/* Sets the narrow system string codepage
+ * A value of 0 represents no codepage, UTF-8 encoding is used instead
+ * Returns 1 if successful or -1 on error
+ */
+LIBFSREFS_EXTERN \
+int libfsrefs_set_codepage(
+     int codepage,
+     libfsrefs_error_t **error );
+
+/* Determines if a file contains a REFS volume signature
  * Returns 1 if true, 0 if not or -1 on error
  */
 LIBFSREFS_EXTERN \
@@ -58,24 +82,28 @@ int libfsrefs_check_volume_signature(
      libfsrefs_error_t **error );
 
 #if defined( LIBFSREFS_HAVE_WIDE_CHARACTER_TYPE )
-/* Determines if an volume containt the REFS file system (check for the REFS signature)
+
+/* Determines if a file contains a REFS volume signature
  * Returns 1 if true, 0 if not or -1 on error
  */
 LIBFSREFS_EXTERN \
 int libfsrefs_check_volume_signature_wide(
      const wchar_t *filename,
      libfsrefs_error_t **error );
-#endif
+
+#endif /* defined( LIBFSREFS_HAVE_WIDE_CHARACTER_TYPE ) */
 
 #if defined( LIBFSREFS_HAVE_BFIO )
-/* Determines if an volume containt the REFS file system (check for the REFS signature) using a Basic File IO (bfio) handle
+
+/* Determines if a file contains a REFS volume signature using a Basic File IO (bfio) handle
  * Returns 1 if true, 0 if not or -1 on error
  */
 LIBFSREFS_EXTERN \
 int libfsrefs_check_volume_signature_file_io_handle(
      libbfio_handle_t *file_io_handle,
      libfsrefs_error_t **error );
-#endif
+
+#endif /* defined( LIBFSREFS_HAVE_BFIO ) */
 
 /* -------------------------------------------------------------------------
  * Notify functions
@@ -197,6 +225,7 @@ int libfsrefs_volume_open(
      libfsrefs_error_t **error );
 
 #if defined( LIBFSREFS_HAVE_WIDE_CHARACTER_TYPE )
+
 /* Opens a volume
  * Returns 1 if successful or -1 on error
  */
@@ -206,9 +235,11 @@ int libfsrefs_volume_open_wide(
      const wchar_t *filename,
      int access_flags,
      libfsrefs_error_t **error );
-#endif
+
+#endif /* defined( LIBFSREFS_HAVE_WIDE_CHARACTER_TYPE ) */
 
 #if defined( LIBFSREFS_HAVE_BFIO )
+
 /* Opens a volume using a Basic File IO (bfio) handle
  * Returns 1 if successful or -1 on error
  */
@@ -218,7 +249,8 @@ int libfsrefs_volume_open_file_io_handle(
      libbfio_handle_t *file_io_handle,
      int access_flags,
      libfsrefs_error_t **error );
-#endif
+
+#endif /* defined( LIBFSREFS_HAVE_BFIO ) */
 
 /* Closes a volume
  * Returns 0 if successful or -1 on error
