--- a/libfsrefs-wiki.ini
+++ b/libfsrefs-wiki.ini
@@ -7,11 +7,15 @@ features: [
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm"]
 
-[source_package]
+[documentation]
 url: "https://googledrive.com/host/0B3fBvzttpiiSSmwxUWxManBEMG8/"
+
+[source_package]
+url: "https://github.com/libyal/libfsrefs/releases"
 
 [git]
 url: "https://github.com/libyal/libfsrefs.git"
+build_dependencies: []
 
 [tests]
 features: ["valgrind"]
