--- a/dpkg/rules
+++ b/dpkg/rules
@@ -7,70 +7,87 @@
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-
 %:
 	dh  $@
 
-install_libfsrefs:
-	# Set up libfsrefs package directories and files
-	mkdir -p debian/libfsrefs/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so.*.*.* debian/libfsrefs/usr/lib
+.PHONY: override_dh_auto_configure
+override_dh_auto_configure:
+	dh_auto_configure -- CFLAGS="-g"
 
-install_libfsrefs_dev:
-	# Set up libfsrefs-dev package directories and files
-	mkdir -p debian/libfsrefs-dev/usr/include
-	mkdir -p debian/libfsrefs-dev/usr/include/libfsrefs
-	mkdir -p debian/libfsrefs-dev/usr/lib
-	mkdir -p debian/libfsrefs-dev/usr/lib/pkgconfig
-	mkdir -p debian/libfsrefs-dev/usr/share/man/man3
-	install -p -m755 debian/tmp/usr/include/*.h debian/libfsrefs-dev/usr/include
-	install -p -m755 debian/tmp/usr/include/libfsrefs/*.h debian/libfsrefs-dev/usr/include/libfsrefs
-	install -p -m755 debian/tmp/usr/lib/*.la debian/libfsrefs-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.a debian/libfsrefs-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so debian/libfsrefs-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/pkgconfig/* debian/libfsrefs-dev/usr/lib/pkgconfig
-	install -p -m755 debian/tmp/usr/share/man/man3/* debian/libfsrefs-dev/usr/share/man/man3
-
-install_libfsrefs_tools:
-	# Set up libfsrefs-tools package directories and files
-	mkdir -p debian/libfsrefs-tools/usr/bin
-	mkdir -p debian/libfsrefs-tools/usr/share/man/man1
-	install -p -m755 debian/tmp/usr/bin/* debian/libfsrefs-tools/usr/bin
-	install -p -m755 debian/tmp/usr/share/man/man1/* debian/libfsrefs-tools/usr/share/man/man1
-
+.PHONY: override_dh_auto_test
 override_dh_auto_test:
 
-override_dh_installinit: install_libfsrefs install_libfsrefs_dev install_libfsrefs_tools
+.PHONY: override_dh_install
+override_dh_install:
+	# Create the libfsrefs package.
+	dh_install "debian/tmp/usr/lib/lib*.so.*.*.*" -p libfsrefs
+	# Create the libfsrefs-dev package.
+	dh_install "debian/tmp/usr/include/*.h" -p libfsrefs-dev
+	dh_install "debian/tmp/usr/include/lib*/*.h" -p libfsrefs-dev
+	dh_install "debian/tmp/usr/lib/*.a" -p libfsrefs-dev
+	dh_install "debian/tmp/usr/lib/*.la" -p libfsrefs-dev
+	dh_install "debian/tmp/usr/lib/*.so" -p libfsrefs-dev
+	dh_install "debian/tmp/usr/lib/pkgconfig/*" -p libfsrefs-dev
+	dh_install "debian/tmp/usr/share/man/man3/*" -p libfsrefs-dev
+	# Create the libfsrefs-tools package.
+	dh_install "debian/tmp/usr/bin/*" -p libfsrefs-tools
+	dh_install "debian/tmp/usr/share/man/man1/*" -p libfsrefs-tools
+	# The libfsrefs-dbg package is created by dh_strip.
+	dh_install
 
+.PHONY: override_dh_installmenu
 override_dh_installmenu:
 
+.PHONY: override_dh_installmime
 override_dh_installmime:
 
+.PHONY: override_dh_installmodules
 override_dh_installmodules:
 
+.PHONY: override_dh_installlogcheck
 override_dh_installlogcheck:
 
+.PHONY: override_dh_installlogrotate
 override_dh_installlogrotate:
 
+.PHONY: override_dh_installpam
 override_dh_installpam:
 
+.PHONY: override_dh_installppp
 override_dh_installppp:
 
+.PHONY: override_dh_installudev
 override_dh_installudev:
 
+.PHONY: override_dh_installwm
 override_dh_installwm:
 
+.PHONY: override_dh_installxfonts
 override_dh_installxfonts:
 
+.PHONY: override_dh_gconf
 override_dh_gconf:
 
+.PHONY: override_dh_icons
 override_dh_icons:
 
+.PHONY: override_dh_perl
 override_dh_perl:
 
+.PHONY: override_dh_pysupport
+override_dh_pysupport:
+
+.PHONY: override_dh_strip
+override_dh_strip:
+ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
+	dh_strip -plibfsrefs --dbg-package=libfsrefs-dbg
+endif
+
+.PHONY: override_dh_shlibdeps
 override_dh_shlibdeps:
 	dh_shlibdeps -Llibfsrefs -l${PWD}/debian/tmp/usr/lib
 
+.PHONY: override_dh_makeshlibs
 override_dh_makeshlibs:
 	dh_makeshlibs -Xlibfsrefs-dev
 
