--- a/libfsrefs.ini
+++ b/libfsrefs.ini
@@ -1,20 +1,15 @@
-[Project]
+[Ppoject]
 name: "libfsrefs"
 status: "experimental"
-features: [
-    "debug_output", "tests", "tools",
-    "git", "source_package",
-    "cygwin", "gcc", "mingw", "msvscpp",
-    "dpkg", "rpm"]
+authors: ["Joachim Metz <joachim.metz@gmail.com>"]
+year_of_creation: "2012"
+documentation_url: "https://googledrive.com/host/0B3fBvzttpiiSSmwxUWxManBEMG8/"
+download_url: "https://github.com/libyal/libfsrefs/releases"
+git_url: "https://github.com/libyal/libfsrefs.git"
+features: ["debug_output"]
 
-[documentation]
-url: "https://googledrive.com/host/0B3fBvzttpiiSSmwxUWxManBEMG8/"
-
-[source_package]
-url: "https://github.com/libyal/libfsrefs/releases"
-
-[git]
-url: "https://github.com/libyal/libfsrefs.git"
+[library]
+description: "Library to access the Windows Resiliant File System (REFS) format"
 build_dependencies: []
 
 [tests]
