--- a/libfsrefs.spec.in
+++ b/libfsrefs.spec.in
@@ -37,11 +37,11 @@ Several tools for reading the Windows Resiliant File System (REFS)
 make %{?_smp_mflags}
 
 %install
-rm -rf ${RPM_BUILD_ROOT}
-make DESTDIR=${RPM_BUILD_ROOT} install
+rm -rf %{buildroot}
+%make_install
 
 %clean
-rm -rf ${RPM_BUILD_ROOT}
+rm -rf %{buildroot}
 
 %post -p /sbin/ldconfig
 
