--- a/msvscpp/fsrefs_test_get_version/fsrefs_test_get_version.vcproj
+++ b/msvscpp/fsrefs_test_get_version/fsrefs_test_get_version.vcproj
@@ -2,9 +2,10 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="libfdatetime"
-	ProjectGUID="{F3C93041-4C86-4F58-B22C-336B2A82038A}"
-	RootNamespace="libfdatetime"
+	Name="fsrefs_test_get_version"
+	ProjectGUID="{639EC8C8-0090-440F-B2F4-E098B3C2CBDC}"
+	RootNamespace="fsrefs_test_get_version"
+	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -19,8 +20,9 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="4"
+			ConfigurationType="1"
 			CharacterSet="1"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -40,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring;..\..\libcerror"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCSTRING;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBFDATETIME"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCSTRING;HAVE_LOCAL_LIBCERROR;LIBFSREFS_DLL_IMPORT"
 				RuntimeLibrary="2"
 				WarningLevel="4"
 				CompileAs="1"
@@ -55,13 +57,21 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)\$(ProjectName).lib"
-				ModuleDefinitionFile=""
-				IgnoreAllDefaultLibraries="false"
+				Name="VCLinkerTool"
+				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;"
+				SubSystem="1"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				RandomizedBaseAddress="2"
+				DataExecutionPrevention="2"
+				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -73,6 +83,9 @@
 				Name="VCFxCopTool"
 			/>
 			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -80,7 +93,7 @@
 			Name="VSDebug|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="4"
+			ConfigurationType="1"
 			CharacterSet="1"
 			>
 			<Tool
@@ -102,7 +115,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\include;..\..\common;..\..\libcstring;..\..\libcerror"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCSTRING;HAVE_LOCAL_LIBCERROR;HAVE_LOCAL_LIBFDATETIME"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;HAVE_LOCAL_LIBCSTRING;HAVE_LOCAL_LIBCERROR;LIBFSREFS_DLL_IMPORT"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="true"
 				RuntimeLibrary="3"
@@ -120,13 +133,22 @@
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
-				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)\$(ProjectName).lib"
-				ModuleDefinitionFile=""
-				IgnoreAllDefaultLibraries="false"
+				Name="VCLinkerTool"
+				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;"
+				GenerateDebugInformation="true"
+				SubSystem="1"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="1"
+				TargetMachine="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -136,6 +158,9 @@
 			/>
 			<Tool
 				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -151,43 +176,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_date_time_values.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_error.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_fat_date_time.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_filetime.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_floatingtime.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_hfs_time.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_nsf_timedate.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_posix_time.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_support.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_systemtime.c"
+				RelativePath="..\..\tests\fsrefs_test_get_version.c"
 				>
 			</File>
 		</Filter>
@@ -197,67 +186,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_date_time_values.h"
+				RelativePath="..\..\tests\fsrefs_test_libcstring.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_definitions.h"
+				RelativePath="..\..\tests\fsrefs_test_libfsrefs.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_error.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_extern.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_fat_date_time.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_filetime.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_floatingtime.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_hfs_time.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_libcerror.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_libcstring.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_nsf_timedate.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_posix_time.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_support.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_systemtime.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_types.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libfdatetime\libfdatetime_unused.h"
+				RelativePath="..\..\tests\fsrefs_test_unused.h"
 				>
 			</File>
 		</Filter>
