--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,12 +16,25 @@ EXTRA_DIST = \
 	$(check_SCRIPTS)
 
 check_PROGRAMS = \
+	fsrefs_test_error \
 	fsrefs_test_get_version
 
-fsrefs_test_get_version_SOURCES = \
+fsrefs_test_error_SOURCES = \
+	fsrefs_test_error.c \
 	fsrefs_test_libfsrefs.h \
 	fsrefs_test_libcstring.h \
+	fsrefs_test_macros.h \
+	fsrefs_test_unused.h
+
+fsrefs_test_error_LDADD = \
+	../libfsrefs/libfsrefs.la \
+	@LIBCSTRING_LIBADD@
+
+fsrefs_test_get_version_SOURCES = \
 	fsrefs_test_get_version.c \
+	fsrefs_test_libfsrefs.h \
+	fsrefs_test_libcstring.h \
+	fsrefs_test_macros.h \
 	fsrefs_test_unused.h
 
 fsrefs_test_get_version_LDADD = \
