--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfsrefs],
- [20160511],
+ [20160904],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -132,6 +132,9 @@ AS_IF(
   [Missing headers: stdarg.h and varargs.h],
   [1])
  ])
+
+dnl Check for test function support
+AX_TESTS_CHECK_LOCAL
 
 dnl Check if DLL support is needed
 AS_IF(
