Moved libcstring macros to common

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20160507
+# Version: 20161030
 
 # Generic auto-generated build files
 *~
@@ -57,6 +57,7 @@ stamp-h[1-9]
 /test-driver
 /ylwrap
 /m4/codeset.m4
+/m4/extern-inline.m4
 /m4/fcntl-o.m4
 /m4/gettext.m4
 /m4/glibc2.m4
@@ -121,7 +122,7 @@ stamp-h[1-9]
 /libfsrefs/libfsrefs_definitions.h
 /fsrefstools/fsrefsinfo
 /tests/fsrefs_test_error
-/tests/fsrefs_test_get_version
+/tests/fsrefs_test_support
 /tests/input
 /tests/tmp*
 
@@ -134,7 +135,6 @@ stamp-h[1-9]
 /libcnotify
 /libcpath
 /libcsplit
-/libcstring
 /libcsystem
 /libcthreads
 /libfcache
