--- a/include/libfsrefs/definitions.h.in
+++ b/include/libfsrefs/definitions.h.in
@@ -73,5 +73,5 @@ enum LIBFSREFS_FILE_ATTRIBUTE_FLAGS
 	LIBFSREFS_FILE_ATTRIBUTE_FLAG_VIRTUAL			= 0x00010000UL
 };
 
-#endif
+#endif /* !defined( _LIBFSREFS_DEFINITIONS_H ) */
 
