--- a/include/libfsrefs/types.h.in
+++ b/include/libfsrefs/types.h.in
@@ -187,14 +187,14 @@ typedef int64_t off64_t;
  */
 #if !defined( __USE_UNIX98 )
 #define __USE_UNIX98
-#define LIBCSTRING_DEFINITION_UNIX98
+#define LIBFSREFS_DEFINITION_UNIX98
 #endif
 
 #include <wchar.h>
 
-#if defined( LIBCSTRING_DEFINITION_UNIX98 )
+#if defined( LIBFSREFS_DEFINITION_UNIX98 )
 #undef __USE_UNIX98
-#undef LIBCSTRING_DEFINITION_UNIX98
+#undef LIBFSREFS_DEFINITION_UNIX98
 #endif
 
 #endif
@@ -208,5 +208,5 @@ typedef intptr_t libfsrefs_volume_t;
 }
 #endif
 
-#endif
+#endif /* !defined( _LIBFSREFS_TYPES_H ) */
 
