--- a/libfsrefs.ini
+++ b/libfsrefs.ini
@@ -10,6 +10,7 @@ features: ["debug_output"]
 
 [library]
 description: "Library to access the Windows Resiliant File System (REFS) format"
+public_types: ["file_entry", "volume"]
 build_dependencies: []
 
 [tests]
