--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,12 +18,10 @@ AM_CPPFLAGS = \
 	@LIBFSREFS_DLL_IMPORT@
 
 TESTS = \
-	test_api_functions.sh \
-	test_api_types.sh
+	test_library.sh
 
 check_SCRIPTS = \
-	test_api_functions.sh \
-	test_api_types.sh \
+	test_library.sh \
 	test_runner.sh
 
 EXTRA_DIST = \
