--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfsrefs],
- [20170101],
+ [20170212],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -108,17 +108,8 @@ AX_LIBFSREFS_CHECK_LOCAL
 dnl Check for enabling libfusn for file Update Sequence Number (USN) Journal type support
 AX_LIBFUSN_CHECK_ENABLE
 
-dnl Check for enabling libcsystem for cross-platform C generic system functions
-AX_LIBCSYSTEM_CHECK_ENABLE
-
-dnl Check if fsrefstools should be build as static executables
-AX_COMMON_CHECK_ENABLE_STATIC_EXECUTABLES
-
-dnl Check if libfsrefs should be build with verbose output
-AX_COMMON_CHECK_ENABLE_VERBOSE_OUTPUT
-
-dnl Check if libfsrefs should be build with debug output
-AX_COMMON_CHECK_ENABLE_DEBUG_OUTPUT
+dnl Check for fsrefstools function support
+AX_FSREFSTOOLS_CHECK_LOCAL
 
 dnl Headers included in various places
 AC_CHECK_HEADERS([stdarg.h varargs.h])
@@ -132,29 +123,6 @@ AS_IF(
 
 dnl Check for test function support
 AX_TESTS_CHECK_LOCAL
-
-dnl Check if DLL support is needed
-AS_IF(
- [test "x$enable_shared" = xyes],
- [AS_CASE(
-  [$host],
-  [*cygwin* | *mingw*],
-  [AC_DEFINE(
-   [HAVE_DLLMAIN],
-   [1],
-   [Define to 1 to enable the DllMain function.])
-  AC_SUBST(
-   [HAVE_DLLMAIN],
-   [1])
-
-  AS_IF(
-   [test "x$ac_cv_enable_static_executables" = xno],
-   [AC_SUBST(
-    [LIBFSREFS_DLL_IMPORT],
-    ["-DLIBFSREFS_DLL_IMPORT"])
-   ])
-  ])
- ])
 
 dnl Set additional compiler flags
 CFLAGS="$CFLAGS -Wall";
@@ -171,7 +139,7 @@ AS_IF(
  ])
 
 AS_IF(
- [test "x$ac_cv_libfusn" = xyes || test "x$ac_cv_libcsystem" = xyes],
+ [test "x$ac_cv_libfusn" = xyes],
  [AC_SUBST(
   [libfsrefs_spec_tools_build_requires],
   [BuildRequires:])
@@ -213,7 +181,6 @@ AC_CONFIG_FILES([libfguid/Makefile])
 AC_CONFIG_FILES([libfwnt/Makefile])
 AC_CONFIG_FILES([libfsrefs/Makefile])
 AC_CONFIG_FILES([libfusn/Makefile])
-AC_CONFIG_FILES([libcsystem/Makefile])
 AC_CONFIG_FILES([fsrefstools/Makefile])
 AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([po/Makevars])
@@ -257,7 +224,6 @@ Building:
    libfguid support:                            $ac_cv_libfguid
    libfwnt support:                             $ac_cv_libfwnt
    libfusn support:                             $ac_cv_libfusn
-   libcsystem support:                          $ac_cv_libcsystem
 
 Features:
    Multi-threading support:                     $ac_cv_libcthreads_multi_threading
