Changes for deployment

--- a/fsrefstools/Makefile.am
+++ b/fsrefstools/Makefile.am
@@ -46,6 +46,7 @@ fsrefsinfo_LDADD = \
 	@LIBBFIO_LIBADD@ \
 	@LIBCPATH_LIBADD@ \
 	@LIBCFILE_LIBADD@ \
+	@LIBUNA_LIBADD@ \
 	@LIBCSPLIT_LIBADD@ \
 	@LIBCNOTIFY_LIBADD@ \
 	@LIBCLOCALE_LIBADD@ \
