--- a/libfsrefs.ini
+++ b/libfsrefs.ini
@@ -3,7 +3,7 @@ name: "libfsrefs"
 status: "experimental"
 authors: ["Joachim Metz <joachim.metz@gmail.com>"]
 year_of_creation: "2012"
-documentation_url: "https://googledrive.com/host/0B3fBvzttpiiSSmwxUWxManBEMG8/"
+documentation_url: "https://github.com/libyal/libfsrefs/tree/master/documentation"
 download_url: "https://github.com/libyal/libfsrefs/releases"
 git_url: "https://github.com/libyal/libfsrefs.git"
 features: ["debug_output"]
