--- a/libfsrefs.ini
+++ b/libfsrefs.ini
@@ -17,6 +17,7 @@ build_dependencies: []
 features: ["valgrind"]
 
 [tools]
+description: "Several tools for reading Windows Resiliant File System (REFS) volumes"
 directory: "fsrefstools"
 names: ["fsrefsinfo"]
 
