--- a/dpkg/control
+++ b/dpkg/control
@@ -1,10 +1,10 @@
 Source: libfsrefs
-Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 7), autotools-dev
+Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config
 Standards-Version: 3.9.5
-Homepage: https://github.com/libyal/libfsrefs/
+Section: libs
+Homepage: https://github.com/libyal/libfsrefs
 
 Package: libfsrefs
 Architecture: any
@@ -33,4 +33,11 @@ Architecture: any
 Depends: libfsrefs (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: Several tools for reading Windows Resiliant File System (REFS) volumes
  Several tools for reading Windows Resiliant File System (REFS) volumes.
+
+Package: libfsrefs-tools-dbg
+Section: debug
+Architecture: any
+Depends: libfsrefs-tools (= ${binary:Version}), ${misc:Depends}
+Description: Debugging symbols for libfsrefs-tools
+ Debugging symbols for libfsrefs-tools.
 
