--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20161030
+# Version: 20170916
 
 # Generic auto-generated build files
 *~
@@ -15,16 +15,16 @@
 *.lo
 *.log
 *.loT
-*.Plo
-*.Po
 *.o
 *.obj
+*.Plo
+*.Po
 *.so
 *.so.[0-9][0-9]*
 *.so.[0-9][0-9]*.[0-9][0-9]*.[0-9][0-9]*
 *.swp
-*.trs
 *.Tpo
+*.trs
 .deps
 .libs
 INSTALL
@@ -53,9 +53,6 @@ stamp-h[1-9]
 /install-sh
 /libtool
 /ltmain.sh
-/missing
-/test-driver
-/ylwrap
 /m4/codeset.m4
 /m4/extern-inline.m4
 /m4/fcntl-o.m4
@@ -68,8 +65,8 @@ stamp-h[1-9]
 /m4/intldir.m4
 /m4/intlmacosx.m4
 /m4/intmax.m4
-/m4/inttypes-pri.m4
 /m4/inttypes_h.m4
+/m4/inttypes-pri.m4
 /m4/lcmessage.m4
 /m4/lib-ld.m4
 /m4/lib-link.m4
@@ -77,14 +74,14 @@ stamp-h[1-9]
 /m4/libtool.m4
 /m4/lock.m4
 /m4/longlong.m4
+/m4/lt~obsolete.m4
 /m4/ltoptions.m4
 /m4/ltsugar.m4
 /m4/ltversion.m4
-/m4/lt~obsolete.m4
 /m4/nls.m4
 /m4/po.m4
-/m4/progtest.m4
 /m4/printf-posix.m4
+/m4/progtest.m4
 /m4/size_max.m4
 /m4/stdint_h.m4
 /m4/threadlib.m4
@@ -93,6 +90,7 @@ stamp-h[1-9]
 /m4/wchar_t.m4
 /m4/wint_t.m4
 /m4/xsize.m4
+/missing
 /po/boldquot.sed
 /po/en@boldquot.header
 /po/en@quot.header
@@ -100,15 +98,15 @@ stamp-h[1-9]
 /po/Makefile.in.in
 /po/Makevars
 /po/Makevars.template
-/po/Rules-quot
 /po/POTFILES
 /po/quot.sed
 /po/remove-potcdate.sed
 /po/remove-potcdate.sin
+/po/Rules-quot
+/test-driver
+/ylwrap
 
 # Project specific files
-/libfsrefs.pc
-/libfsrefs.spec
 /common/config.h
 /common/config.h.in
 /common/types.h
@@ -117,13 +115,18 @@ stamp-h[1-9]
 /include/libfsrefs/definitions.h
 /include/libfsrefs/features.h
 /include/libfsrefs/types.h
+/libfsrefs.pc
+/libfsrefs.spec
 /libfsrefs/libfsrefs.rc
 /libfsrefs/libfsrefs_definitions.h
+/fsrefstools/*.exe
 /fsrefstools/fsrefsinfo
+/tests/*.exe
 /tests/fsrefs_test_block_descriptor
 /tests/fsrefs_test_block_descriptors
 /tests/fsrefs_test_directory
 /tests/fsrefs_test_error
+/tests/fsrefs_test_file_entry
 /tests/fsrefs_test_io_handle
 /tests/fsrefs_test_level0_metadata
 /tests/fsrefs_test_level1_metadata
