--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,6 @@ environment:
   - TARGET: vs2017
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     VisualStudioVersion: 15.0
-    platform: Win32
     configuration: Release
   - TARGET: cygwin
   - TARGET: cygwin64
@@ -36,7 +35,7 @@ environment:
   - TARGET: mingw-w64
 
 install:
-- cmd: git clone https://github.com/libyal/vstools.git && move vstools ..\
+- cmd: git clone https://github.com/libyal/vstools.git ..\vstools
 
 build_script:
 - ps: .\synclibs.ps1
@@ -49,7 +48,7 @@ build_script:
     msbuild vs2010\libfsrefs.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" )
 - cmd: if [%TARGET%]==[vs2012] (
     set PYTHONPATH=..\vstools &&
-    C:\Python27\python.exe ..\vstools\scripts\msvscpp-convert.py --output-format 2012 --extend-with-x64 --python-path "C:\\Python27-x64" msvscpp\libfsrefs.sln &&
+    C:\Python27\python.exe ..\vstools\scripts\msvscpp-convert.py --extend-with-x64 --output-format 2012 --python-path "C:\\Python27-x64" msvscpp\libfsrefs.sln &&
     msbuild vs2012\libfsrefs.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" )
 - cmd: if [%TARGET%]==[vs2013] (
     set PYTHONPATH=..\vstools &&
@@ -61,25 +60,21 @@ build_script:
     msbuild vs2015\libfsrefs.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" )
 - cmd: if [%TARGET%]==[vs2017] (
     set PYTHONPATH=..\vstools &&
-    C:\Python27\python.exe ..\vstools\scripts\msvscpp-convert.py --output-format 2017 msvscpp\libfsrefs.sln &&
-    msbuild vs2017\libfsrefs.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" )
+    C:\Python27\python.exe ..\vstools\scripts\msvscpp-convert.py --extend-with-x64 --no-python-dll --output-format 2017 msvscpp\libfsrefs.sln &&
+    msbuild vs2017\libfsrefs.sln /property:Platform=Win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
+    msbuild vs2017\libfsrefs.sln /property:Platform=x64 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" )
 - cmd: if [%TARGET%]==[cygwin] (
-    xcopy /q /s C:\projects\libfsrefs C:\cygwin\home\appveyor\ &&
-    C:\cygwin\bin\bash -e -l -c "cd libfsrefs" &&
-    C:\cygwin\bin\bash -e -l -c "./synclibs.sh && ./autogen.sh" )
+    xcopy /i /q /s C:\projects\libfsrefs C:\cygwin\home\appveyor\libfsrefs &&
+    C:\cygwin\bin\bash -e -l -c "cd libfsrefs && ./synclibs.sh && ./autogen.sh" )
 - cmd: if [%TARGET%]==[cygwin64] (
-    xcopy /q /s C:\projects\libfsrefs C:\cygwin64\home\appveyor\ &&
-    C:\cygwin64\bin\bash -e -l -c "cd libfsrefs" &&
-    C:\cygwin64\bin\bash -e -l -c "./synclibs.sh && ./autogen.sh" )
+    xcopy /i /q /s C:\projects\libfsrefs C:\cygwin64\home\appveyor\libfsrefs &&
+    C:\cygwin64\bin\bash -e -l -c "cd libfsrefs && ./synclibs.sh && ./autogen.sh" )
 - cmd: if [%TARGET%]==[mingw] (
-    xcopy /q /s C:\projects\libfsrefs C:\MinGW\msys\1.0\home\appveyor\ &&
-    C:\MinGW\msys\1.0\bin\bash -e -l -c "cd libfsrefs" &&
-    C:\MinGW\msys\1.0\bin\bash -e -l -c "sed 's/@VERSION@/0.29/g' m4/pkg.m4.in > m4/pkg.m4" &&
-    C:\MinGW\msys\1.0\bin\bash -e -l -c "./synclibs.sh && ./autogen.sh" )
+    xcopy /i /q /s C:\projects\libfsrefs C:\MinGW\msys\1.0\home\appveyor\libfsrefs &&
+    C:\MinGW\msys\1.0\bin\bash -e -l -c "cd libfsrefs && sed 's/@VERSION@/0.29/g' m4/pkg.m4.in > m4/pkg.m4 && ./synclibs.sh && ./autogen.sh" )
 - cmd: if [%TARGET%]==[mingw-w64] (
-    xcopy /q /s C:\projects\libfsrefs C:\msys64\home\appveyor\ &&
-    C:\msys64\usr\bin\bash -e -l -c "cd libfsrefs" &&
-    C:\msys64\usr\bin\bash -e -l -c "./synclibs.sh && ./autogen.sh" )
+    xcopy /i /q /s C:\projects\libfsrefs C:\msys64\home\appveyor\libfsrefs &&
+    C:\msys64\usr\bin\bash -e -l -c "cd libfsrefs && ./synclibs.sh && ./autogen.sh" )
 
 test_script:
 - cmd: rem Run tests
@@ -96,11 +91,11 @@ test_script:
 - ps: if ($env:TARGET -eq "vs2017") {
     .\runtests.ps1 }
 - cmd: if [%TARGET%]==[cygwin] (
-    C:\cygwin\bin\bash -e -l -c "./runtests.sh" )
+    C:\cygwin\bin\bash -e -l -c "cd libfsrefs && ./runtests.sh" )
 - cmd: if [%TARGET%]==[cygwin64] (
-    C:\cygwin64\bin\bash -e -l -c "./runtests.sh" )
+    C:\cygwin64\bin\bash -e -l -c "cd libfsrefs && ./runtests.sh" )
 - cmd: if [%TARGET%]==[mingw] (
-    C:\MinGW\msys\1.0\bin\bash -e -l -c "./runtests.sh" )
+    C:\MinGW\msys\1.0\bin\bash -e -l -c "cd libfsrefs && ./runtests.sh" )
 - cmd: if [%TARGET%]==[mingw-w64] (
-    C:\msys64\usr\bin\bash -e -l -c "./runtests.sh" )
+    C:\msys64\usr\bin\bash -e -l -c "cd libfsrefs && ./runtests.sh" )
 
