--- a/libfsrefs.spec.in
+++ b/libfsrefs.spec.in
@@ -5,13 +5,13 @@ Summary: Library to access the Windows Resiliant File System (REFS) format
 Group: System Environment/Libraries
 License: LGPL
 Source: %{name}-%{version}.tar.gz
-URL: https://github.com/libyal/libfsrefs/
+URL: https://github.com/libyal/libfsrefs
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 @libfsrefs_spec_requires@ @ax_libbfio_spec_requires@ @ax_libcdata_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcfile_spec_requires@ @ax_libclocale_spec_requires@ @ax_libcnotify_spec_requires@ @ax_libcpath_spec_requires@ @ax_libcsplit_spec_requires@ @ax_libcthreads_spec_requires@ @ax_libfcache_spec_requires@ @ax_libfdata_spec_requires@ @ax_libfdatetime_spec_requires@ @ax_libfguid_spec_requires@ @ax_libfwnt_spec_requires@ @ax_libuna_spec_requires@
 @libfsrefs_spec_build_requires@ @ax_libbfio_spec_build_requires@ @ax_libcdata_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcfile_spec_build_requires@ @ax_libclocale_spec_build_requires@ @ax_libcnotify_spec_build_requires@ @ax_libcpath_spec_build_requires@ @ax_libcsplit_spec_build_requires@ @ax_libcthreads_spec_build_requires@ @ax_libfcache_spec_build_requires@ @ax_libfdata_spec_build_requires@ @ax_libfdatetime_spec_build_requires@ @ax_libfguid_spec_build_requires@ @ax_libfwnt_spec_build_requires@ @ax_libuna_spec_build_requires@
 
 %description
-libfsrefs is a library to support the Windows Resiliant File System (REFS) format
+Library to access the Windows Resiliant File System (REFS) format
 
 %package devel
 Summary: Header files and libraries for developing applications for libfsrefs
@@ -22,12 +22,13 @@ Requires: libfsrefs = %{version}-%{release}
 Header files and libraries for developing applications for libfsrefs.
 
 %package tools
-Summary: Several tools for reading Windows Resiliant File System (REFS)
+Summary: Several tools for reading Windows Resiliant File System (REFS) volumes
 Group: Applications/System
-Requires: libfsrefs = %{version}-%{release}
+Requires: libfsrefs = %{version}-%{release} @ax_libfusn_spec_requires@
+@libfsrefs_spec_tools_build_requires@ @ax_libfusn_spec_build_requires@
 
 %description tools
-Several tools for reading the Windows Resiliant File System (REFS)
+Several tools for reading Windows Resiliant File System (REFS) volumes
 
 %prep
 %setup -q
@@ -65,7 +66,7 @@ rm -rf %{buildroot}
 %files tools
 %defattr(644,root,root,755)
 %doc AUTHORS COPYING NEWS README
-%attr(755,root,root) %{_bindir}/fsrefsinfo
+%attr(755,root,root) %{_bindir}/*
 %{_mandir}/man1/*
 
 %changelog
