--- a/libfsrefs.ini
+++ b/libfsrefs.ini
@@ -1,4 +1,5 @@
 [project]
+description: "libfsrefs is a library to access the Resilient File System (ReFS)."
 name: "libfsrefs"
 status: "experimental"
 year_of_creation: "2012"
