--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,9 +61,9 @@ build_script:
     msbuild /verbosity:quiet vs2015\libfsrefs.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" )
 - cmd: if [%TARGET%]==[vs2017] (
     set PYTHONPATH=..\vstools &&
-    C:\Python27\python.exe ..\vstools\scripts\msvscpp-convert.py --extend-with-x64 --no-python-dll --output-format 2017 msvscpp\libfsrefs.sln &&
-    msbuild /verbosity:quiet vs2017\libfsrefs.sln /property:Platform=Win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
-    msbuild /verbosity:quiet vs2017\libfsrefs.sln /property:Platform=x64 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" )
+    C:\Python27\python.exe ..\vstools\scripts\msvscpp-convert.py --extend-with-x64 --no-python-dll --output-format 2017 --with-dokany msvscpp\libfsrefs.sln &&
+    msbuild /verbosity:quiet vs2017\libfsrefs.sln /property:Platform=Win32 /property:PlatformToolset=v141 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
+    msbuild /verbosity:quiet vs2017\libfsrefs.sln /property:Platform=x64 /property:PlatformToolset=v141 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" )
 - cmd: if [%TARGET%]==[cygwin] (
     xcopy /i /q /s C:\projects\libfsrefs C:\cygwin\home\appveyor\libfsrefs &&
     C:\cygwin\bin\bash -e -l -c "cd libfsrefs && ./synclibs.sh --use-head && ./autogen.sh" )
@@ -79,17 +79,7 @@ build_script:
 
 test_script:
 - cmd: rem Run tests
-- ps: if ($env:TARGET -eq "vs2008") {
-    .\runtests.ps1 }
-- ps: if ($env:TARGET -eq "vs2010") {
-    .\runtests.ps1 }
-- ps: if ($env:TARGET -eq "vs2012") {
-    .\runtests.ps1 }
-- ps: if ($env:TARGET -eq "vs2013") {
-    .\runtests.ps1 }
-- ps: if ($env:TARGET -eq "vs2015") {
-    .\runtests.ps1 }
-- ps: if ($env:TARGET -eq "vs2017") {
+- ps: If ($env:TARGET -eq "vs2008" -or $env:TARGET -eq "vs2010" -or $env:TARGET -eq "vs2012" -or $env:TARGET -eq "vs2013" -or $env:TARGET -eq "vs2015" -or $env:TARGET -eq "vs2017") {
     .\runtests.ps1 }
 - cmd: if [%TARGET%]==[cygwin] (
     C:\cygwin\bin\bash -e -l -c "cd libfsrefs && ./runtests.sh" )
