--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfsrefs],
- [20180203],
+ [20180402],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -47,6 +47,12 @@ AX_COMMON_CHECK_ENABLE_WINAPI
 
 dnl Check if wide character type should be enabled
 AX_COMMON_CHECK_ENABLE_WIDE_CHARACTER_TYPE
+
+dnl Check if verbose output should be enabled
+AX_COMMON_CHECK_ENABLE_VERBOSE_OUTPUT
+
+dnl Check if debug output should be enabled
+AX_COMMON_CHECK_ENABLE_DEBUG_OUTPUT
 
 dnl Check for type definitions
 AX_TYPES_CHECK_LOCAL
@@ -107,12 +113,6 @@ AX_LIBFUSN_CHECK_ENABLE
 
 dnl Check if fsrefstools required headers and functions are available
 AX_FSREFSTOOLS_CHECK_LOCAL
-
-dnl Check if libfsrefs should be build with verbose output
-AX_COMMON_CHECK_ENABLE_VERBOSE_OUTPUT
-
-dnl Check if libfsrefs should be build with debug output
-AX_COMMON_CHECK_ENABLE_DEBUG_OUTPUT
 
 dnl Check if tests required headers and functions are available
 AX_TESTS_CHECK_LOCAL
