--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfsrefs],
- [20180503],
+ [20180820],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -122,7 +122,7 @@ AS_IF(
  [test "x$enable_shared" = xyes],
  [AS_CASE(
   [$host],
-  [*cygwin* | *mingw*],
+  [*cygwin* | *mingw* | *msys*],
   [AC_DEFINE(
    [HAVE_DLLMAIN],
    [1],
@@ -131,7 +131,10 @@ AS_IF(
    [HAVE_DLLMAIN],
    [1])
 
-  dnl Used in tests
+  AC_SUBST(
+   [LIBFSREFS_DLL_EXPORT],
+   ["-DLIBFSREFS_DLL_EXPORT"])
+
   AC_SUBST(
    [LIBFSREFS_DLL_IMPORT],
    ["-DLIBFSREFS_DLL_IMPORT"])
