--- a/libfsrefs/Makefile.am
+++ b/libfsrefs/Makefile.am
@@ -14,7 +14,8 @@ AM_CPPFLAGS = \
 	@LIBFDATA_CPPFLAGS@ \
 	@LIBFDATETIME_CPPFLAGS@ \
 	@LIBFGUID_CPPFLAGS@ \
-	@LIBFWNT_CPPFLAGS@
+	@LIBFWNT_CPPFLAGS@ \
+	@LIBFSREFS_DLL_EXPORT@
 
 lib_LTLIBRARIES = libfsrefs.la
 
